<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prashant.quizapp.MainActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:gravity="center"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:orientation="vertical">

    <TextView
        android:text="@string/label_quiz"
        android:gravity="center"
        android:textSize="@dimen/label_size"
        android:textColor="@color/labelColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionTagColor"
          android:text="@string/question_tag_one"/>
      <ImageView
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:layout_height="@dimen/quest_one_image_height"
          android:scaleType="centerCrop"
          android:src="@drawable/indian_flag"/>
      <TextView android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textColor="@color/questionColor"
          android:text="@string/question_one"/>
      <EditText
          android:id="@+id/questionOneEditText"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:layout_height="wrap_content" android:focusableInTouchMode="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionTagColor"
          android:text="@string/question_tag_two"/>
      <TextView android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionColor"
          android:text="@string/question_two"/>
      <RadioGroup
          android:id="@+id/question_two_radio_group"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_question_two_option_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_two_option_one"/>
        <RadioButton android:id="@+id/radio_question_two_option_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_two_option_two"/>
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionTagColor"
          android:text="@string/question_tag_three"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textColor="@color/questionColor"
          android:text="@string/question_three"/>
      <RadioGroup
          android:id="@+id/question_three_radio_group"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_question_three_option_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_three_option_one"/>
        <RadioButton android:id="@+id/radio_question_three_option_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_three_option_two"/>
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionTagColor"
          android:text="@string/question_tag_four"/>
      <TextView android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textColor="@color/questionColor"
          android:text="@string/question_four"/>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <CheckBox android:id="@+id/checkbox_option_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_four_option_one"/>
        <CheckBox android:id="@+id/checkbox_option_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_four_option_two"/>
      </LinearLayout>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <CheckBox android:id="@+id/checkbox_option_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_four_option_three"/>
        <CheckBox android:id="@+id/checkbox_option_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_four_option_four"/>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textColor="@color/questionTagColor"
          android:textStyle="bold"
          android:text="@string/question_tag_five"/>
      <TextView android:layout_width="match_parent"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:layout_height="wrap_content"
          android:textSize="@dimen/question_size"
          android:textStyle="bold"
          android:textColor="@color/questionColor"
          android:text="@string/question_five"/>
      <RadioGroup
          android:id="@+id/question_five_radio_group"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/inner_top_margin"
          android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_question_five_option_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_five_option_one"/>
        <RadioButton android:id="@+id/radio_question_five_option_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/question_five_option_two"/>
      </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:onClick="checkScore"/>
  </LinearLayout>
</ScrollView>